--- a/index.html
+++ b/index.html
@@ -477,37 +477,33 @@
             margin-bottom: 30px;
         }
 
-        .social-links {
-            display: flex;
-            gap: 20px;
-            margin-top: 30px;
-        }
-
-      .social-links a {
-    width: 48px;
-    height: 48px;
-    border-radius: 50%;
-    border: 2px solid var(--primary);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--primary);
-    font-size: 20px;
-    transition: 0.3s ease;
-    background: transparent;
-    flex-shrink: 0;
+        .social-icons {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 20px;
 }
 
-
-
-       .social-links a:hover {
-    background: var(--primary);
-    color: var(--dark);
-    box-shadow: 0 0 12px var(--primary);
-    transform: scale(1.1);
+.social-icons a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  border: 2px solid #00f0ff;
+  border-radius: 50%;
+  color: #00f0ff;
+  font-size: 20px;
+  text-decoration: none;
+  transition: all 0.3s ease;
 }
 
-
+.social-icons a:hover {
+  background-color: #00f0ff;
+  color: #000;
+  transform: scale(1.1);
+}
 
         .contact-form {
             flex: 1;
@@ -912,14 +908,15 @@
                         <p><i class="fas fa-phone"></i> 8873365815</p>
                         <p><i class="fas fa-map-marker-alt"></i> [Your City], [Your Country]</p>
                     </div>
-                    <div class="social-links">
-                        <a href="https://github.com/yourusername"><i class="fab fa-github"></i></a>
-                        <a  href="https://www.facebook.com/profile.php?id=100054977332777&mibextid=ZbWKwL"><i class="fab fa-facebook"></i></a>
-                        <a href="https://linkedin.com/in/yourprofile"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="https://twitter.com/yourhandle"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.instagram.com/mohitsaxena5930l?igsh=d2kzbm5qdGQ1a3k5"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-dribbble"></i></a>
-                    </div>
+                  <div class="social-icons">
+  <a href="#"><i class="fab fa-github"></i></a>
+  <a href="#"><i class="fab fa-facebook"></i></a>
+  <a href="#"><i class="fab fa-linkedin"></i></a>
+  <a href="#"><i class="fab fa-twitter"></i></a>
+  <a href="#"><i class="fab fa-instagram"></i></a>
+  <a href="#"><i class="fab fa-dribbble"></i></a>
+</div>
+
                 </div>
                 <div class="contact-form">
                     <form>
