--- a/index.html
+++ b/index.html
@@ -678,6 +678,18 @@
                 </div>
             </nav>
         </div>
+<style>
+  body {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+</style>
+<script>
+  document.addEventListener('contextmenu', event => event.preventDefault());
+</script>
+
     </header>
 
     <!-- Hero Section -->
