--- a/index.html
+++ b/index.html
@@ -656,6 +656,18 @@
             }
         }
     </style>
+<style>
+  body {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+</style>
+<script>
+  document.addEventListener('contextmenu', event => event.preventDefault());
+</script>
+
 </head>
 
 <body>
