--- a/index.html
+++ b/index.html
@@ -921,14 +921,15 @@
                         <p><i class="fas fa-map-marker-alt"></i> Canada , India </p>
                     </div>
                     <h4> ""Mohit saxena ❤️ </h4>
-                    <div class="social-links">
-                        <a href="https://github.com/yourusername"><i class="fab fa-github"></i></a>
-                        <a  href="https://www.facebook.com/profile.php?id=100054977332777&mibextid=ZbWKwL"><i class="fab fa-facebook"></i></a>
-                        <a href="https://linkedin.com/in/yourprofile"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="https://twitter.com/yourhandle"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.instagram.com/mohitsaxena5930l?igsh=d2kzbm5qdGQ1a3k5"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-dribbble"></i></a>
-                    </div>
+                   <div class="social-icons">
+  <a href="#"><i class="fab fa-github"></i></a>
+  <a href="#"><i class="fab fa-facebook"></i></a>
+  <a href="#"><i class="fab fa-linkedin"></i></a>
+  <a href="#"><i class="fab fa-twitter"></i></a>
+  <a href="#"><i class="fab fa-instagram"></i></a>
+  <a href="#"><i class="fab fa-dribbble"></i></a>
+</div>
+
                 </div>
                 <div class="contact-form">
                     <form>
