--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
                         <p><i class="fas fa-map-marker-alt"></i> Canada , India </p>
                     </div>
                     <h4> ""Mohit saxena ❤️ </h4>
-                   <<div class="social-icons">
+                   <div class="social-icons">
   <a href="#"><i class="fab fa-github"></i></a>
   <a href="#"><i class="fab fa-facebook"></i></a>
   <a href="#"><i class="fab fa-linkedin"></i></a>
