--- a/index.html
+++ b/index.html
@@ -928,10 +928,10 @@
                     <h4> ""Mohit saxena ❤️ </h4>
                    <div class="social-icons">
   <a href="#"><i class="fab fa-github"></i></a>
-  <a href="#"><i class="fab fa-facebook"></i></a>
+  <a href="https://www.facebook.com/profile.php?id=100054977332777&mibextid=ZbWKwL"><i class="fab fa-facebook"></i></a>
   <a href="#"><i class="fab fa-linkedin"></i></a>
   <a href="#"><i class="fab fa-twitter"></i></a>
-  <a href="#"><i class="fab fa-instagram"></i></a>
+  <a href="https://www.instagram.com/mohitsaxena5930l?igsh=d2kzbm5qdGQ1a3k5"><i class="fab fa-instagram"></i></a>
   <a href="#"><i class="fab fa-dribbble"></i></a>
 </div>
 
