--- a/index.html
+++ b/index.html
@@ -918,8 +918,7 @@
             <div class="contact-container">
                 <div class="contact-info">
                     <h3>Let's work together!</h3>
-                    <p>I'm currently available for freelance work or full-time positions. Feel free to reach out if you
-                        have a project in mind or just want to connect.</p>
+                    <p>If you have a project in mind or would like to be involved don't contact us.</p>
                     <div class="contact-details">
                         <p><i class="fas fa-envelope"></i> mohitoutlook.official@gmail.com</p>
                         <p><i class="fas fa-phone"></i> 8873365815 </p>
