--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
   <a href="#"><i class="fab fa-linkedin"></i></a>
   <a href="#"><i class="fab fa-twitter"></i></a>
   <a href="https://www.instagram.com/mohitsaxena5930l?igsh=d2kzbm5qdGQ1a3k5"><i class="fab fa-instagram"></i></a>
-  <a href="#"><i class="fab fa-dribbble"></i></a>
+ <a href="https://www.snapchat.com/add/mahisaxena6292l?share_id=HcLB-yKFAQs&locale=en-IN"><i class="fab fa-snapchat"></i></a>
 </div>
 
 
