--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             bottom: 0;
             width: 40%;
             height: 100%;
-            background: url('https://images.unsplash.com/photo-1571171637578-41bc2dd41cd2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80') no-repeat center/cover;
+            background: url('https://images.unsplash.com/photo-1605379399843-5870eea9b74e?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHNvZnR3YXJlJTIwZGV2ZWxvcGVyfGVufDB8fDB8fHww') no-repeat center/cover;
             clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 0% 100%);
         }
 
