--- a/index.html
+++ b/index.html
@@ -684,8 +684,8 @@
                 <ul class="nav-links">
                     <li><a href="#ghbh">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#resume">Resume</a></li>
+                    <li><a href="https://mohitsaxena6363.github.io/mohit-html/">Projects</a></li>
+                    <li><a href="#resume">Mohit saxena ❤️</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="hamburger">
